Fixed empty row option in multipleFileUpload. Fixed action alignment in multipleFileUpload. Added File Resources infoHtml.

--- a/hypersocket-fs/src/main/resources/webapp/css/viewfs.css
+++ b/hypersocket-fs/src/main/resources/webapp/css/viewfs.css
@@ -125,6 +125,7 @@ body {
 
 #uploadWrapper {
 	padding-top: 50px;
+	padding-left: 50px;
 }
 
 .notifyjs-confirm-base {
